# bauern

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Constants.hpp  Makefile  Node.cpp  Node.hpp  Tree.cpp  Tree.hpp  Utils.cpp  Utils.hpp  bauern.cpp  cmake_install.cmake
test/: BauernTest.cpp  CMakeLists.txt  ExampleTests.cpp
